Kata 10
Se resuelve Ejercicio 10. se hace un map de list creando la estructura con un Map pidiendo las caracteristicas name y videolist, donde videolist hacemos un filtro para emparejar el id de cada pelicula con el id de su respectivo "name", luego con el meotod Map se hace la estructura para el VideoId y movieTitle guardandose en la lista.