@@ -1,13 +1,16 @@
 package katas;
 
+import com.codepoetics.protonpack.StreamUtils;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import model.MovieList;
 import util.DataUtil;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -54,10 +57,17 @@ public class Kata10 {
     public static List<Map> execute() {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
-
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        List<Map> newList = lists.stream().map(
+                element -> Map.of(
+                        "name", element.get("name"),
+                        "videosList: ", videos.stream()
+                                .filter(itemVideo -> itemVideo.get("listId").equals(element.get("id")))
+                                .map(itemVideo -> Map.of(
+                                        "movieId: ", itemVideo.get("id"),
+                                        "movieTitle: ", itemVideo.get("title")))
+                                .collect(Collectors.toList())
+                )).collect(Collectors.toList());
+        System.out.println(newList);
+        return newList;
     }
 }
